--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <h1>Hola Marcelo</h1>
 <h2>Bienvenidos a Github Pages</h2>
+<h3>Este es un nuevo mundo</h3>
+<p>Github pages es una forma facil de alojar paginas sencillas sin costo y con una interfaz facil de usar.</>
